tests/snapshots/snapshots__fixture_python_dotenv_level3.snap
---
source: tests/snapshots.rs
expression: output
---
__init__.py
     6→def load_ipython_extension(ipython: Any) -> None:
    12→def get_cli_string(
    13→    path: Optional[str] = None,
    14→    action: Optional[str] = None,
    15→    key: Optional[str] = None,
    16→    value: Optional[str] = None,
    17→    quote: Optional[str] = None,
    18→):
    19→    """Returns a string suitable for running as a shell script.
    42→__all__ = [
__main__.py
cli.py
    24→def enumerate_env() -> Optional[str]:
    25→    """
    60→@click.version_option(version=__version__)
    62→def cli(ctx: click.Context, file: Any, quote: Any, export: Any) -> None:
    63→    """This script is used to set, get or unset values from a .env file."""
    67→@contextmanager
    68→def stream_file(path: os.PathLike) -> Iterator[IO[str]]:
    69→    """
    93→def list_values(ctx: click.Context, output_format: str) -> None:
    94→    """Display all the stored key/value."""
   112→@cli.command(name="set")
   116→def set_value(ctx: click.Context, key: Any, value: Any) -> None:
   117→    """Store the given key/value."""
   128→@cli.command()
   131→def get(ctx: click.Context, key: Any) -> None:
   132→    """Retrieve the value for the given key."""
   145→@cli.command()
   148→def unset(ctx: click.Context, key: Any) -> None:
   149→    """Removes the given key."""
   172→@click.argument("commandline", nargs=-1, type=click.UNPROCESSED)
   173→def run(ctx: click.Context, override: bool, commandline: tuple[str, ...]) -> None:
   174→    """Run command with environment variables present."""
   193→def run_command(command: List[str], env: Dict[str, str]) -> None:
   194→    """Replace the current process with the specified command.
ipython.py
    11→@magics_class
    12→class IPythonDotEnv(Magics):
    33→    @line_magic
    34→    def dotenv(self, line):
    48→def load_ipython_extension(ipython):
    49→    """Register the %dotenv magic."""
main.py
    25→def _load_dotenv_disabled() -> bool:
    35→def with_warn_for_invalid_lines(mappings: Iterator[Binding]) -> Iterator[Binding]:
    45→class DotEnv:
    46→    def __init__(
    47→        self,
    48→        dotenv_path: Optional[StrPath],
    49→        stream: Optional[IO[str]] = None,
    50→        verbose: bool = False,
    51→        encoding: Optional[str] = None,
    52→        interpolate: bool = True,
    53→        override: bool = True,
    54→    ) -> None:
    64→    def _get_stream(self) -> Iterator[IO[str]]:
    78→    def dict(self) -> Dict[str, Optional[str]]:
    94→    def parse(self) -> Iterator[Tuple[str, Optional[str]]]:
   100→    def set_as_environment_variables(self) -> bool:
   115→    def get(self, key: str) -> Optional[str]:
   128→def get_key(
   129→    dotenv_path: StrPath,
   130→    key_to_get: str,
   131→    encoding: Optional[str] = "utf-8",
   132→) -> Optional[str]:
   142→def rewrite(
   143→    path: StrPath,
   144→    encoding: Optional[str],
   145→) -> Iterator[Tuple[IO[str], IO[str]]]:
   163→def set_key(
   164→    dotenv_path: StrPath,
   165→    key_to_set: str,
   166→    value_to_set: str,
   167→    quote_mode: str = "always",
   168→    export: bool = False,
   169→    encoding: Optional[str] = "utf-8",
   170→) -> Tuple[Optional[bool], str, str]:
   211→def unset_key(
   212→    dotenv_path: StrPath,
   213→    key_to_unset: str,
   214→    quote_mode: str = "always",
   215→    encoding: Optional[str] = "utf-8",
   216→) -> Tuple[Optional[bool], str]:
   244→def resolve_variables(
   245→    values: Iterable[Tuple[str, Optional[str]]],
   246→    override: bool,
   247→) -> Mapping[str, Optional[str]]:
   269→def _walk_to_root(path: str) -> Iterator[str]:
   287→def find_dotenv(
   288→    filename: str = ".env",
   289→    raise_error_if_not_found: bool = False,
   290→    usecwd: bool = False,
   291→) -> str:
   338→def load_dotenv(
   339→    dotenv_path: Optional[StrPath] = None,
   340→    stream: Optional[IO[str]] = None,
   341→    verbose: bool = False,
   342→    override: bool = False,
   343→    interpolate: bool = True,
   344→    encoding: Optional[str] = "utf-8",
   345→) -> bool:
   387→def dotenv_values(
   388→    dotenv_path: Optional[StrPath] = None,
   389→    stream: Optional[IO[str]] = None,
   390→    verbose: bool = False,
   391→    interpolate: bool = True,
   392→    encoding: Optional[str] = "utf-8",
   393→) -> Dict[str, Optional[str]]:
   423→def _is_file_or_fifo(path: StrPath) -> bool:
parser.py
    14→def make_regex(string: str, extra_flags: int = 0) -> Pattern[str]:
    35→class Original(NamedTuple):
    40→class Binding(NamedTuple):
    47→class Position:
    48→    def __init__(self, chars: int, line: int) -> None:
    52→    @classmethod
    53→    def start(cls) -> "Position":
    56→    def set(self, other: "Position") -> None:
    60→    def advance(self, string: str) -> None:
    65→class Error(Exception):
    69→class Reader:
    70→    def __init__(self, stream: IO[str]) -> None:
    75→    def has_next(self) -> bool:
    78→    def set_mark(self) -> None:
    81→    def get_marked(self) -> Original:
    87→    def peek(self, count: int) -> str:
    90→    def read(self, count: int) -> str:
    97→    def read_regex(self, regex: Pattern[str]) -> Sequence[str]:
   105→def decode_escapes(regex: Pattern[str], string: str) -> str:
   112→def parse_key(reader: Reader) -> Optional[str]:
   123→def parse_unquoted_value(reader: Reader) -> str:
   128→def parse_value(reader: Reader) -> str:
   142→def parse_binding(reader: Reader) -> Binding:
   179→def parse_stream(stream: IO[str]) -> Iterator[Binding]:
variables.py
     5→_posix_variable: Pattern[str] = re.compile(
    18→class Atom(metaclass=ABCMeta):
    19→    def __ne__(self, other: object) -> bool:
    25→    @abstractmethod
    26→    def resolve(self, env: Mapping[str, Optional[str]]) -> str: ...
    29→class Literal(Atom):
    30→    def __init__(self, value: str) -> None:
    33→    def __repr__(self) -> str:
    36→    def __eq__(self, other: object) -> bool:
    41→    def __hash__(self) -> int:
    44→    def resolve(self, env: Mapping[str, Optional[str]]) -> str:
    48→class Variable(Atom):
    49→    def __init__(self, name: str, default: Optional[str]) -> None:
    53→    def __repr__(self) -> str:
    56→    def __eq__(self, other: object) -> bool:
    61→    def __hash__(self) -> int:
    64→    def resolve(self, env: Mapping[str, Optional[str]]) -> str:
    70→def parse_variables(value: str) -> Iterator[Atom]:
version.py
     1→__version__ = "1.2.1"
